<resources>
    <string name="app_name">Book Store</string>

    <string name="bottom_navigation_item_home">خانه</string>
    <string name="bottom_navigation_item_search">جست و جو</string>
    <string name="bottom_navigation_item_bag_shop">سبد خرید</string>
    <string name="bottom_navigation_item_profile">پروفایل</string>

    <string name="home_page_list_group_top_discount">بیشترین تخفیف </string>
    <string name="home_page_list_group_top_sell">پرفروش ترین ها </string>
    <string name="home_page_list_group_newest">جدیدترین ها </string>
    <string name="home_page_list_group_favorite">محبوب  ترین ها </string>

    <string name="search_page_filter_title">جست و جو بر اساس </string>
    <string name="search_page_filter_book_name">نام کتاب</string>
    <string name="search_page_filter_book_autor_name">نام نویسنده</string>
    <string name="search_page_filter_book_group_name">گروه</string>

    <string name="IntroSlider_next">بعدی</string>
    <string name="IntroSlider_prev">قبلی</string>
    <string name="IntroSlider_slide1">جست و جو سریع کتاب</string>
    <string name="IntroSlider_slide2">قیمت مناسب</string>
    <string name="IntroSlider_slide3">خرید آنلاین کتاب</string>

</resources>
