<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_filter_Search_Page"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:layout_alignTop="@id/searchview_Search_page"
            android:layout_alignBottom="@id/searchview_Search_page"
            android:layout_alignParentRight="true"
            android:padding="12dp"
            android:src="@drawable/filter"
            />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchview_Search_page"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/image_view_filter_Search_Page"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_layout_filter_continer_Search_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_filter_Search_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/search_page_filter_title"
            android:textColor="@color/title_text_color"
            android:layout_marginRight="10dp"
            android:alpha="0"
            />

        <RadioGroup
            android:id="@+id/radio_group_Search_View"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="6dp"
            android:tag="close">

            <RadioButton
                android:id="@+id/rb_group_name_Search_View"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/search_page_filter_book_group_name"
                android:gravity="center"
                android:layout_margin="4dp"
                />

            <RadioButton
                android:id="@+id/rb_autor_name_Search_View"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/search_page_filter_book_autor_name"
                android:gravity="center"
                android:layout_margin="4dp"
                />

            <RadioButton
                android:id="@+id/rb_book_name_Search_View"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/search_page_filter_book_name"
                android:gravity="center"
                android:layout_margin="4dp"
                android:checked="true"
                />

        </RadioGroup>

    </LinearLayout>

    <ListView
        android:id="@+id/list_view_Search_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

</LinearLayout>