<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_page_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_page_list_group_top_sell"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/homepage_margin_title_group_right"
                android:layout_marginLeft="@dimen/homepage_margin_title_group_left"
                android:layout_marginTop="@dimen/homepage_margin_title_group_top"
                android:layout_marginBottom="@dimen/homepage_margin_title_group_bottom"
                android:textColor="@color/homepage_title1_textcolor"
                android:textStyle="bold"
                android:textSize="@dimen/home_page_title_type"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_page_recyclerview_topsell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/homepage_margin_each_element"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="@dimen/homepage_margin_each_element"
                app:cardBackgroundColor="@color/homePage_cardview_background_banner1"
                app:cardCornerRadius="15dp">

                <RelativeLayout
                    android:id="@+id/homepage_banner1_continer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/homepage_imageview_banner1"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:src="@drawable/book"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        />

                    <TextView
                        android:id="@+id/homepage_textview_name_banner1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="name"
                        android:layout_alignTop="@id/homepage_imageview_banner1"
                        android:layout_toLeftOf="@id/homepage_imageview_banner1"
                        android:layout_marginRight="30dp"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"
                        android:textColor="@color/title_text_color"
                        />

                    <TextView
                        android:id="@+id/homepage_textview_summery_banner1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:textSize="@dimen/text_size_sub_title"
                        android:textColor="@color/sub_title_text_color"
                        android:scrollbars="vertical"
                        android:layout_alignRight="@id/homepage_textview_name_banner1"
                        android:layout_alignBottom="@id/homepage_imageview_banner1"
                        android:layout_below="@id/homepage_textview_name_banner1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_page_list_group_top_discount"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/homepage_margin_title_group_right"
                android:layout_marginLeft="@dimen/homepage_margin_title_group_left"
                android:layout_marginTop="@dimen/homepage_margin_title_group_top"
                android:layout_marginBottom="@dimen/homepage_margin_title_group_bottom"
                android:textColor="@color/homepage_title2_textcolor"
                android:textStyle="bold"
                android:textSize="@dimen/home_page_title_type"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_page_recyclerview_topdiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/homepage_margin_each_element"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_page_list_group_newest"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/homepage_margin_title_group_right"
                android:layout_marginLeft="@dimen/homepage_margin_title_group_left"
                android:layout_marginTop="@dimen/homepage_margin_title_group_top"
                android:layout_marginBottom="@dimen/homepage_margin_title_group_bottom"
                android:textColor="@color/homepage_title3_textcolor"
                android:textStyle="bold"
                android:textSize="@dimen/home_page_title_type"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_page_recyclerview_newest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/homepage_margin_each_element"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="@dimen/homepage_margin_each_element"
                app:cardBackgroundColor="@color/homePage_cardview_background_banner2"
                app:cardCornerRadius="15dp">

                <RelativeLayout
                    android:id="@+id/homepage_banner2_continer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/homepage_imageview_banner2"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:src="@drawable/book"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        />

                    <TextView
                        android:id="@+id/homepage_textview_name_banner2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="name"
                        android:layout_alignTop="@id/homepage_imageview_banner2"
                        android:layout_toLeftOf="@id/homepage_imageview_banner2"
                        android:layout_marginRight="30dp"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"
                        android:textColor="@color/title_text_color"
                        />

                    <TextView
                        android:id="@+id/homepage_textview_summery_banner2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:textSize="@dimen/text_size_sub_title"
                        android:textColor="@color/sub_title_text_color"
                        android:scrollbars="vertical"
                        android:layout_alignRight="@id/homepage_textview_name_banner2"
                        android:layout_alignBottom="@id/homepage_imageview_banner2"
                        android:layout_below="@id/homepage_textview_name_banner2"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_page_list_group_favorite"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/homepage_margin_title_group_right"
                android:layout_marginLeft="@dimen/homepage_margin_title_group_left"
                android:layout_marginTop="@dimen/homepage_margin_title_group_top"
                android:layout_marginBottom="@dimen/homepage_margin_title_group_bottom"
                android:textColor="@color/homepage_title4_textcolor"
                android:textStyle="bold"
                android:textSize="@dimen/home_page_title_type"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_page_recyclerview_favoriot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/homepage_margin_each_element"
                />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/Home_page_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminate="true"
        />

</RelativeLayout>